# char_index

./: Cargo.toml  README.md
benches/: char_index.rs
src/: borrowed.rs  indexed_chars.rs  lib.rs  owned.rs
