[package]
name = "char_index"
version = "0.1.1"
edition = "2021"
keywords = ["string", "chars", "index"]
categories = ["data-structures", "no-std"]
homepage = "https://github.com/ultrabear/char_index"
repository = "https://github.com/ultrabear/char_index"
description = "A crate for efficient charwise indexing into a string"
readme = "README.md"
license = "MPL-2.0"
# Subject to change
# reported by cargo-msrv, may be lower
rust-version = "1.56"

[profile.dev]
opt-level = 1

[dev-dependencies]
rand = { version = "0.8.5" }
criterion = "0.5.1"

[[bench]]
name = "char_index"
harness = false
